css/reviews.css
/* REVIEWS SECTION */

.reviews {
  background-color: var(--color-3);

  /* height: 160rem; */
  position: relative;
}

.reviews-centering__box {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 12.8rem;
  margin-bottom: 5rem;
}

.reviews-title {
  font-size: var(--font-size-18);
  font-family: var(--font-4);
  font-weight: 400;
  color: var(--color-2);
  line-height: 1;
  margin-bottom: 2.5rem;
}

.reviews-text {
  font-size: var(--font-size-11);
  font-family: var(--font-1);
  font-weight: 800;
  color: var(--color-1);
  margin-bottom: 10rem;
}

/* REVIEW CARD AND THE GALLERY */
.reviews-gallery__box {
  margin-bottom: 9.6rem;
}

.review-card {
  background-color: var(--color-4);
  padding: 10rem 4rem 4rem 4rem;
  border-radius: 3rem;
  max-width: 43rem;

  position: relative;

  /* box-shadow: var(--shadow-1); */
}

/* .review-photo {
  position: absolute;
  width: 16rem !important;
  height: 16rem !important;
  border-radius: 50%;
  border: 0.3rem solid var(--color-2);
  top: -17.5%;
  left: 30%;
} */

.review-photo {
  position: absolute;
  width: 16rem !important;
  height: 16rem !important;
  border-radius: 50%;
  border: 0.3rem solid var(--color-2);
  top: -17.5%;
  left: 30%;
}

.review-card__user {
  font-size: var(--font-size-12);
  font-family: var(--font-1);
  font-weight: 800;
  color: var(--color-2);
  margin-bottom: 0.5rem;
}

.review-card__date {
  font-size: var(--font-size-8);
  font-family: var(--font-1);
  font-weight: 400;
  color: var(--color-2);
  margin-bottom: 1rem;
}

.review-card__text {
  font-size: var(--font-size-5);
  font-family: var(--font-2);
  font-weight: 800;
  color: var(--color-2);
}

/* GALLERY NAV */

.owl-reviews .owl-nav {
  position: relative;
  /* top: 0;
  right: 0; */
}

.owl-reviews .owl-nav .owl-next {
  position: absolute;
  bottom: 25rem;
  right: -6.5rem;
}

.owl-reviews .owl-nav .owl-prev {
  position: absolute;
  bottom: 25rem;
  left: -6.5rem;
}

.owl-reviews .owl-nav .owl-next,
.owl-reviews .owl-nav .owl-prev {
  width: 5rem;
  height: 5rem;
}

.owl-reviews .owl-nav .owl-next,
.owl-reviews .owl-nav .owl-prev {
  background: none !important;
  outline: none !important;
  opacity: 1;
}

.owl-reviews .owl-nav .owl-next:hover,
.owl-reviews .owl-nav .owl-prev:hover {
  outline: none;
  transition: all 0.2s ease;
}

.owl-reviews .owl-nav {
  margin: 0;
}

/* make reservation */

.make-reservation::after {
  content: "FAÇA SUA RESERVA";
  position: absolute;

  background-color: var(--color-2);
  padding: 2rem 8rem;
  border-radius: 2rem;

  font-size: var(--font-size-11);
  font-family: var(--font-3);
  font-weight: 800;
  display: inline;
  color: var(--color-3);

  transform: translateX(-19.7rem);
  left: 50%;
  bottom: -14rem;
  z-index: 990;
}

